# Hacker-News-Crawler

./: .gitignore  Dockerfile  README.md  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
src/: main.py
src/hn_crawler/: __init__.py
src/hn_crawler/application/: _init_.py  filters.py  service.py
src/hn_crawler/domain/: __init__.py  models.py
src/hn_crawler/infra/: __init__.py  scraper.py
src/hn_crawler/interfaces/: __init__.py  api.py  web.py
templates/: index.html
tests/: conftest.py  test_api_routes.py  test_filters.py  test_filters_sorting.py  test_scraper.py  test_service_cache.py  test_word_count.py  test_word_count_edges.py
tests/fixtures/: hn_top.html
